a
In file included from /home/solype/delivery/current_days/Rtype/ecs/include/registry.hpp:253,
                 from /home/solype/delivery/current_days/Rtype/client/include/Core.hpp:8,
                 from /home/solype/delivery/current_days/Rtype/client/src/Core.cpp:8:
/home/solype/delivery/current_days/Rtype/ecs/include/registry.tpp: In instantiation of ‘void ecs::registry::add_system(Function&&) [with Components = {Background}; Function = SystemBackground]’:
/home/solype/delivery/current_days/Rtype/client/src/Core.cpp:28:37:   required from here
   28 |     _registry.add_system<Background>(SystemBackground(this->time));
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/solype/delivery/current_days/Rtype/ecs/include/registry.tpp:84:38: error: no matching function for call to ‘ecs::registry::encapsulate_system_call(const SystemBackground&, sparse_array<Background>&)’
   84 |         this->encapsulate_system_call(f, reg.get_components<Components>()...);
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/solype/delivery/current_days/Rtype/ecs/include/registry.hpp:228:14: note: candidate: ‘template<class ... Components> void ecs::registry::encapsulate_system_call(ecs::isystem<Components ...>&, sparse_array<Components>& ...)’
  228 |         void encapsulate_system_call(ecs::isystem<Components ...> &system, sparse_array<Components> &... arrays);
      |              ^~~~~~~~~~~~~~~~~~~~~~~
/home/solype/delivery/current_days/Rtype/ecs/include/registry.hpp:228:14: note:   template argument deduction/substitution failed:
/home/solype/delivery/current_days/Rtype/ecs/include/registry.tpp:84:38: note:   types ‘ecs::isystem<Components ...>’ and ‘const SystemBackground’ have incompatible cv-qualifiers
   84 |         this->encapsulate_system_call(f, reg.get_components<Components>()...);
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [client/CMakeFiles/Client.dir/build.make:202: client/CMakeFiles/Client.dir/src/Core.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:227: client/CMakeFiles/Client.dir/all] Error 2
make: *** [Makefile:156: all] Error 2
